--- a/USTHWeather/app/src/main/res/layout/forecastfragment.xml
+++ b/USTHWeather/app/src/main/res/layout/forecastfragment.xml
@@ -5,6 +5,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/logo"
+        android:contentDescription="@string/todo" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_height="match_parent"
         android:layout_width="match_parent"
